=================== Release 1.0 2017-03-31 =====================
Description
    * First version of the App.
Changes
    * Version 1.0 Build 01 (2017/03/31)
        * Mayor change to the L&F of the App. (2017/03/10)
        * Removed support to include tolerance in period of accepting tasks. (2017/03/10)
        * Added support for a function to only migrate dilated tasks for the next day. (2017/03/09)
        * Added support to show project state inside the project's view as a badge. Also corrected flicker of tables. (2017/03/09)
        * Added support for animating table changes. (2017/03/08)
        * Corrected bug where menu items where not collapsing on themselves. (2017/03/08)
        * Corrected bug where menu items overlap each other. (2017/03/08)
        * Corrected bug where when a menu item is closed it should return the view to its initial state. (2017/03/08)
        * Added support for a search menu item. (2017/03/07)
        * Added support to filter the tasks table. (2017/03/06)
        * Added some very basic support for CloudKit. (2017/03/06)
        * Added support for a filter menu item. (2017/03/06)
        * Added support to change the category of a task, but only when is EDITABLE. Also changed the layout of custom views. Sensible change! (2017/03/03)
        * Added support to notify the user that all tasks added while FIRST_DAY are going for today. (2017/03/03)
        * Added support for more amicable notification messages. (2017/03/03)
        * Added support to remove project categories. (2017/03/03)
        * Removed tolerance from the calculation of FIRST_DAY. (2017/03/03)
        * Finally corrected bug with both queues, where tasks where not being migrated to the next day. (2017/03/03)
        * Added support for ProjectConfigurations view and also added support to ask the user before deleting a project. (2017/03/02)