@@ -43,7 +43,42 @@ class AKAddTaskViewController: AKCustomViewController, UITextFieldDelegate, UIPi
                             if let mr = Func.AKObtainMasterReference() {
                                 // Allways add today to the table if not present, if present return the last day.
                                 if let currentDay = DataInterface.addNewWorkingDay(project: presenterController.project) {
+                                    let migratedPendingDay = (presenterController.project.pendingQueue?.tasks?.allObjects.first as? Task)?.category?.day
                                     let migratedDilateDay = (presenterController.project.dilateQueue?.tasks?.allObjects.first as? Task)?.category?.day
+                                    
+                                    // Add task from PendingQueue.
+                                    if let tasks = presenterController.project.pendingQueue?.tasks?.allObjects as? [Task] {
+                                        for task in tasks {
+                                            if let categoryName = task.category?.name {
+                                                // Here is the problem where tasks in queues where not added to the next day. If the next day
+                                                // doesn't have the category for which the task belongs, then it will return NIL and never execute
+                                                // this block of code.
+                                                // SOLUTION: If the new day doesn't have the category, then create a new one with the same name.
+                                                if let category = DataInterface.getCategoryByName(day: currentDay, name: categoryName) {
+                                                    category.addToTasks(task)
+                                                    currentDay.addToCategories(category)
+                                                    
+                                                    // Remove from queue.
+                                                    presenterController.project.pendingQueue?.removeFromTasks(task)
+                                                    
+                                                    task.creationDate = currentDay.date
+                                                    task.initialCompletionPercentage = task.completionPercentage
+                                                }
+                                                else {
+                                                    let newCategory = Category(context: mr.getMOC())
+                                                    newCategory.name = categoryName
+                                                    newCategory.addToTasks(task)
+                                                    currentDay.addToCategories(newCategory)
+                                                    
+                                                    // Remove from queue.
+                                                    presenterController.project.pendingQueue?.removeFromTasks(task)
+                                                    
+                                                    task.creationDate = currentDay.date
+                                                    task.initialCompletionPercentage = task.completionPercentage
+                                                }
+                                            }
+                                        }
+                                    }
                                     
                                     // Add task from DilateQueue.
                                     if let tasks = presenterController.project.dilateQueue?.tasks?.allObjects as? [Task] {
@@ -82,11 +117,12 @@ class AKAddTaskViewController: AKCustomViewController, UITextFieldDelegate, UIPi
                                     // To avoid having an empty day, because all tasks from one day have been moved, then check the day
                                     // from which the pending or dilate tasks come from and if they are empty remove those days from the
                                     // project.
-                                    if let day = migratedDilateDay {
+                                    if let day1 = migratedPendingDay, let day2 = migratedDilateDay {
                                         // Count the task in both days.
-                                        let leftTasks = DataInterface.countAllTasksInDay(day: day)
+                                        let leftTasks = DataInterface.countAllTasksInDay(day: day1) + DataInterface.countAllTasksInDay(day: day2)
                                         if leftTasks == 0 {
-                                            presenterController.project.removeFromDays(day)
+                                            presenterController.project.removeFromDays(day1)
+                                            presenterController.project.removeFromDays(day2)
                                         }
                                     }
                                     
@@ -118,42 +154,42 @@ class AKAddTaskViewController: AKCustomViewController, UITextFieldDelegate, UIPi
                 let migratedPendingDay = (self.project.pendingQueue?.tasks?.allObjects.first as? Task)?.category?.day
                 let migratedDilateDay = (self.project.dilateQueue?.tasks?.allObjects.first as? Task)?.category?.day
                 
-                // Add task from PendingQueue.
-                if let tasks = self.project.pendingQueue?.tasks?.allObjects as? [Task] {
-                    for task in tasks {
-                        if let categoryName = task.category?.name {
-                            // Here is the problem where tasks in queues where not added to the next day. If the next day
-                            // doesn't have the category for which the task belongs, then it will return NIL and never execute
-                            // this block of code.
-                            // SOLUTION: If the new day doesn't have the category, then create a new one with the same name.
-                            if let category = DataInterface.getCategoryByName(day: currentDay, name: categoryName) {
-                                category.addToTasks(task)
-                                currentDay.addToCategories(category)
-                                
-                                // Remove from queue.
-                                self.project.pendingQueue?.removeFromTasks(task)
-                                
-                                task.creationDate = currentDay.date
-                                task.initialCompletionPercentage = task.completionPercentage
-                            }
-                            else {
-                                let newCategory = Category(context: mr.getMOC())
-                                newCategory.name = categoryName
-                                newCategory.addToTasks(task)
-                                currentDay.addToCategories(newCategory)
-                                
-                                // Remove from queue.
-                                self.project.pendingQueue?.removeFromTasks(task)
-                                
-                                task.creationDate = currentDay.date
-                                task.initialCompletionPercentage = task.completionPercentage
+                if self.migrate.isOn {
+                    // Add task from PendingQueue.
+                    if let tasks = self.project.pendingQueue?.tasks?.allObjects as? [Task] {
+                        for task in tasks {
+                            if let categoryName = task.category?.name {
+                                // Here is the problem where tasks in queues where not added to the next day. If the next day
+                                // doesn't have the category for which the task belongs, then it will return NIL and never execute
+                                // this block of code.
+                                // SOLUTION: If the new day doesn't have the category, then create a new one with the same name.
+                                if let category = DataInterface.getCategoryByName(day: currentDay, name: categoryName) {
+                                    category.addToTasks(task)
+                                    currentDay.addToCategories(category)
+                                    
+                                    // Remove from queue.
+                                    self.project.pendingQueue?.removeFromTasks(task)
+                                    
+                                    task.creationDate = currentDay.date
+                                    task.initialCompletionPercentage = task.completionPercentage
+                                }
+                                else {
+                                    let newCategory = Category(context: mr.getMOC())
+                                    newCategory.name = categoryName
+                                    newCategory.addToTasks(task)
+                                    currentDay.addToCategories(newCategory)
+                                    
+                                    // Remove from queue.
+                                    self.project.pendingQueue?.removeFromTasks(task)
+                                    
+                                    task.creationDate = currentDay.date
+                                    task.initialCompletionPercentage = task.completionPercentage
+                                }
                             }
                         }
                     }
-                }
-                
-                // Add task from DilateQueue.
-                if self.migrate.isOn {
+                    
+                    // Add task from DilateQueue.
                     if let tasks = self.project.dilateQueue?.tasks?.allObjects as? [Task] {
                         for task in tasks {
                             if let categoryName = task.category?.name {
