@@ -3,6 +3,7 @@ Description
     * First version of the App.
 Changes
     * Version 1.0 Build 01 (2017/03/31)
+        * Added support to migrate pending tasks too using migrate only check. (2017/03/10)
         * Mayor change to the L&F of the App. (2017/03/10)
         * Removed support to include tolerance in period of accepting tasks. (2017/03/10)
         * Added support for a function to only migrate dilated tasks for the next day. (2017/03/09)
